src/test/deca/syntax/valid/test_synt/control_structures/while_in_while.deca
// Description:
//    Declaration dun while dans while
//
// Resultats:
//    Pas d'erreur
//
// Historique:
//    cree le 14/01/2022

{
    while(true) {
        while(true) {
            
        }
    }
}