src/test/deca/syntax/invalid/test_synt/control_structures/while_in_while_broken.deca
// Description:
//    Declaration dun while dans un while
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: erreur de parse instruction ligne 13
//
// Historique:
//    cree le 14/01/2022

{
    while(true) {
        while(true)
    }
}